@@ -92,9 +92,10 @@ int ethernet_classify_next_proto(ipacket_t * ipacket, unsigned index) {
             retval.offset = sizeof (struct ethhdr);
             retval.status = Classified;
             break;
-            break;
-            break;
         default:
+            retval.proto_id = PROTO_UNKNOWN;
+            retval.offset = sizeof (struct ethhdr);
+            retval.status = Classified;
             break;
     }
     return set_classified_proto(ipacket, index + 1, retval);
