@@ -1141,7 +1141,10 @@ int ip6_classify_next_proto(ipacket_t * ipacket, unsigned index) {
             retval.status = Classified;
             break;
         default:
-            return 0;
+            retval.proto_id = PROTO_UNKNOWN;
+            retval.offset = next_offset;
+            retval.status = Classified;
+            break;
     }
     return set_classified_proto(ipacket, index + 1, retval);
     //return retval;
