@@ -4,6 +4,7 @@ RELEASE NOTES
 
 Version 1.6.10.2
 - Fixed NFS extraction
+- Add PROTO_UNKNOWN if cannot find the protocol of some protocol which has classify_next_proto function base on a header value such as: PROTO_ETHERNET, PROTO_IP, PROTO_IPV6, PROTO_GTE, PROTO_GTP,...
 
 Version 1.6.10.1
 - Fixed GTP offset
